# laguna

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
data/: CMakeLists.txt  converters.h  locatortrait.h  missingtraits.h  series.cpp  series.h  vectoroperator.h
dataframe/: CMakeLists.txt  Frame.cpp  genericstorage.tcc
dataframe/include/: Frame.h  converters.h  frame.h  genericstorage.h  missingtraits.h  series.h  seriesStorage.h
frame/: Frame.h  series.h
resources/: hjm_formatted.csv
test/: CMakeLists.txt  alltests.cpp  test_series.cpp
